--- a/dynamicWebApp.html
+++ b/dynamicWebApp.html
@@ -25,10 +25,15 @@ function processFetchDataDog( rData )
 
 </head>
 <body>
-	<h1>Weather</h1>
-	<p id="firstP"></p>
-	<script>
-		getText4();
-	</script>
+	<h1>Final Space</h1>
+	<table id=menu>
+		<tr>
+			<td>Locations</td>
+			<td>Characters</td>
+			<td>Quotes</td>
+			<td>Episodes</td>
+		</tr>
+		
+	</table>
 </body>
 </html>
